[package]
name = "encrust"
version = "0.1.0"
authors = ["Emil Taylor Bye <phptph@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Obfuscate data in memory by encrypting it to hide it until needed"
keywords = ["obfuscation"]
categories = ["no-std"]
repository = "https://github.com/emiltayl/encrust/"

[dependencies]
encrust-core = { path = "../encrust-core", "version" = "0.1.0", default-features = false }
encrust-macros = { path = "../encrust-macros", "version" = "0.1.0", optional = true }

[dev-dependencies]
chacha20 = "0.9.1"
rand = "0.8.5"
zeroize = { version = "1.6.0", features = ["derive"] }

[features]
all = ["macros", "rand", "std"]
default = ["macros", "rand", "std"]
macros = ["dep:encrust-macros", "encrust-core/macros"]
rand = ["encrust-core/rand"]
std = ["encrust-core/std"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
