[package]
name = "encrust-core"
description = "Core functionality for the encrust crate"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rand = { "version" = "0.9.0", default-features = false, features = ["small_rng", "alloc"] }
zeroize = { version = "1.6.0", features = ["derive"] }
rapidhash = { version = "4.1.0", default-features = false, optional = true }

[dev-dependencies]
rand = { "version" = "0.9.0", default-features = false, features = ["thread_rng"] }

[features]
all = ["std", "macros", "hashstrings"]
default = ["std", "macros", "hashstrings"]
macros = []
hashstrings = ["dep:rapidhash"]
std = ["rand/std", "rapidhash?/std", "zeroize/std"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[lints]
workspace = true