[package]
name = "encrust-macros"
description = "Proc and derive macros for the encrust crate"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dev-dependencies]
zeroize = "1.6.0"

[dependencies]
encrust-core = { path = "../encrust-core", version = "0.3.1" }
proc-macro2 = "1.0.67"
quote = "1.0.33"
rand = "0.9.0"
syn = { version = "2.0.33", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }

[features]
default = ["hashstrings", "std"]
hashstrings = []
std = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
cargo-args = ["--no-deps"]

[lints]
workspace = true