[package]
name = "nostd_compile"
description = "Crate used to verify that compiling encrust with no_std works."
version = "0.3.0"
edition = "2024"
publish = false

[dependencies]
encrust = { version = "0.3.0", path = "../../crates/encrust", default-features = false, features = ["hashstrings", "macros"] }
dlmalloc = { version = "0.2.11", features = ["global"] }

[profile.dev]
panic = "abort"

[workspace]